# ld_modbus

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
docs/: architecture.md  rtu-timing-porting.md
include/: ld_modbus.h  ld_modbus_client.h  ld_modbus_rtu_framer.h  ld_modbus_server.h
scripts/: check_quality.ps1  hardware_rtu_smoke.py  test_gcc.ps1  test_mingw.ps1
src/: ld_modbus_client.c  ld_modbus_core.c  ld_modbus_rtu_framer.c  ld_modbus_server.c
tests/: test_ld_modbus.c  test_ld_modbus_rtu_framer.c  test_ld_modbus_rtu_receiver.c
